Implement toggle component with dash callback

--- a/notebooks/Wholesale Hedge Trades.ipynb
+++ b/notebooks/Wholesale Hedge Trades.ipynb
@@ -3,25 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "healthy-garlic",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: dash-dangerously-set-inner-html in /opt/conda/lib/python3.8/site-packages (0.0.2)\n"
-     ]
-    }
-   ],
-   "source": [
-    "! pip install dash-dangerously-set-inner-html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "theoretical-connection",
+   "id": "interstate-french",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "tropical-eclipse",
+   "execution_count": 2,
+   "id": "studied-congress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "indirect-acrobat",
+   "id": "essential-aluminum",
    "metadata": {},
    "source": [
     "# PAGE 1"
@@ -59,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "sealed-badge",
+   "execution_count": 3,
+   "id": "exotic-alliance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "catholic-upset",
+   "execution_count": 4,
+   "id": "exterior-disorder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "familiar-criterion",
+   "id": "needed-matter",
    "metadata": {},
    "source": [
     "## SECTION 1"
@@ -97,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "established-latino",
+   "id": "disturbed-mistress",
    "metadata": {},
    "source": [
     "### CARD 1"
@@ -105,8 +87,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "tracked-comparison",
+   "execution_count": 5,
+   "id": "south-christianity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,8 +104,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "fleet-shell",
+   "execution_count": 6,
+   "id": "offshore-preliminary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "liable-lawrence",
+   "id": "ethical-correction",
    "metadata": {},
    "source": [
     "### CARD 2"
@@ -147,8 +129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "controlling-public",
+   "execution_count": 7,
+   "id": "fitting-praise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "powered-trailer",
+   "execution_count": 29,
+   "id": "nominated-expression",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,20 +166,21 @@
     "        ),\n",
     "        side=\"right\",\n",
     "    ),\n",
-    "    template=\"noos_watermark+noos_base+hoover_xunified+xaxis_period+min_modebar\",\n",
+    "    template=\"noos_watermark+noos_base+hoover_xunified+min_modebar\",\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "parental-honolulu",
+   "execution_count": 30,
+   "id": "appropriate-voluntary",
    "metadata": {},
    "outputs": [],
    "source": [
     "all1 = go.Scatter(\n",
     "    x = trades_volume_df.index,\n",
     "    y = trades_volume_df.total_volume * 2,\n",
+    "    line_color=themes.NOOS_HTML_COLORS[\"gray\"],\n",
     "    name = \"Volumes\",\n",
     "    fill='tozeroy',\n",
     "    yaxis=\"y\",\n",
@@ -207,6 +190,7 @@
     "all2 = go.Scatter(\n",
     "    x = trades_volume_df.index,\n",
     "    y = trades_volume_df.price_average,\n",
+    "    line_color=themes.NOOS_HTML_COLORS[\"accent\"],\n",
     "    name = \"Prices\",\n",
     "    visible = True,\n",
     "    yaxis=\"y2\"\n",
@@ -215,6 +199,7 @@
     "latest1 = go.Scatter(\n",
     "    x = latest_volumes_df.index,\n",
     "    y = latest_volumes_df.total_volume * 2,\n",
+    "    line_color=themes.NOOS_HTML_COLORS[\"gray\"],\n",
     "    name = \"Volumes\",\n",
     "    fill='tozeroy',\n",
     "    yaxis=\"y\",\n",
@@ -224,6 +209,7 @@
     "latest2 = go.Scatter(\n",
     "    x = latest_volumes_df.index,\n",
     "    y = latest_volumes_df.price_average,\n",
+    "    line_color=themes.NOOS_HTML_COLORS[\"accent\"],\n",
     "    name = \"Prices\",\n",
     "    visible = False,\n",
     "    yaxis=\"y2\"\n",
@@ -237,18 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ongoing-harrison",
-   "metadata": {},
-   "source": [
-    "## Definitions:\n",
-    "\n",
-    " - **Volumes** represent aggregated volumes per delivery period.\n",
-    " - **Prices** represent average traded prices per delivery period"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "falling-edgar",
+   "id": "peaceful-census",
    "metadata": {},
    "source": [
     "# DASH"
@@ -256,52 +231,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "extensive-straight",
+   "execution_count": 31,
+   "id": "pleased-spectrum",
    "metadata": {},
    "outputs": [],
    "source": [
     "import jupyter_dash\n",
     "\n",
-    "import dash_dangerously_set_inner_html as html\n",
     "from dash import dcc\n",
     "\n",
     "import dash_mdc_neptune as mdc"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "cleared-chicken",
+   "cell_type": "markdown",
+   "id": "military-decline",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "radio = dcc.RadioItems(\n",
-    "    id=\"radio\",\n",
-    "    options=[\n",
-    "        {'label': 'All trades', 'value': 'ALL'},\n",
-    "        {'label': 'Latest only', 'value': 'LATEST'},\n",
-    "    ],\n",
-    "    value='ALL'\n",
-    ")"
+    "## LAYOUT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "reduced-obligation",
+   "execution_count": 38,
+   "id": "defined-simulation",
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = html.DangerouslySetInnerHTML(children=all_styler.to_html())\n",
-    "\n",
-    "extras = {\n",
-    "    \"style\": {\"height\": \"100%\", \"width\": \"100%\"},\n",
-    "}\n",
+    "# Display graph & table in tabs\n",
     "graph = dcc.Graph(\n",
     "    id=\"graph\",\n",
     "    figure=fig,\n",
-    "    **extras\n",
+    "    style={\"height\": \"100%\", \"width\": \"100%\"},\n",
+    ")\n",
+    "table = mdc.Table(\n",
+    "    id='table',\n",
+    "    columns=[{\"field\": c, \"headerName\": c, \"width\": 200} for i in all_df.columns],\n",
+    "    rows=all_df.to_dict(orient='records'),\n",
+    "    pageSize=10,\n",
     ")\n",
     "\n",
     "tab = mdc.Tab(\n",
@@ -311,15 +278,40 @@
     "        {\"label\": \"Trade blotter\"},\n",
     "        {\"label\": \"Trade profile\"},\n",
     "    ],\n",
-    ")\n",
-    "section = mdc.Section(\n",
-    "    id=\"section\",\n",
-    "    orientation=\"columns\",\n",
-    "    children=[radio, tab],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "manual-disability",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize based on toggles\n",
+    "toggle = mdc.Toggle(\n",
+    "    id=\"toggle\",\n",
     "    options=[\n",
-    "        {\"title\": \"\", \"size\": 2},\n",
-    "        {\"title\": \"\"},\n",
+    "        {'label': 'All'},\n",
+    "        {'label': 'Last'},\n",
     "    ],\n",
+    "    selected='all',\n",
+    ")\n",
+    "\n",
+    "box = mdc.Box(children=[toggle, tab])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "careful-leone",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dashboard layout\n",
+    "section = mdc.Section(\n",
+    "    children=box,\n",
+    "    options=[{\"title\": \"Custom portfolio\"}],\n",
     ")\n",
     "\n",
     "page = mdc.Page(children=section)\n",
@@ -329,9 +321,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "retained-brick",
+   "metadata": {},
+   "source": [
+    "## APP"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "celtic-image",
+   "execution_count": 41,
+   "id": "complicated-insider",
    "metadata": {},
    "outputs": [
     {
@@ -362,31 +362,24 @@
     "\n",
     "\n",
     "@app.callback(\n",
-    "    Output(component_id='tab', component_property='children'),\n",
-    "    Input(component_id='radio', component_property='value')\n",
+    "    Output(component_id='table', component_property='rows'),\n",
+    "    Output(component_id='graph', component_property='figure'),\n",
+    "    Input(component_id='toggle', component_property='selected')\n",
     ")\n",
     "def update_tabs(value):\n",
-    "    if value == 'ALL':\n",
-    "        table = html.DangerouslySetInnerHTML(all_styler.to_html())\n",
+    "    if value == 'all':\n",
+    "        rows = all_df.to_dict('records')\n",
     "        fig.data[2].visible=False\n",
     "        fig.data[3].visible=False\n",
     "        fig.data[0].visible=True\n",
     "        fig.data[1].visible=True\n",
     "    else:\n",
+    "        rows = latest_df.to_dict('records')\n",
     "        fig.data[0].visible=False\n",
     "        fig.data[1].visible=False\n",
     "        fig.data[2].visible=True\n",
     "        fig.data[3].visible=True\n",
-    "        table = html.DangerouslySetInnerHTML(latest_styler.to_html())\n",
-    "    extras = {\n",
-    "        \"style\": {\"height\": \"100%\", \"width\": \"100%\"},\n",
-    "    }\n",
-    "    graph = dcc.Graph(\n",
-    "        id=\"graph\",\n",
-    "        figure=fig,\n",
-    "        **extras\n",
-    "    )\n",
-    "    return [table, graph]\n",
+    "    return [rows, fig]\n",
     "\n",
     "app.run_server(mode='external', host=\"0.0.0.0\", port=8001)"
    ]
@@ -394,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "certified-coaching",
+   "id": "young-briefing",
    "metadata": {},
    "outputs": [],
    "source": []
