Reorganize react lib into modular components

--- a/notebooks/Short Term Markets.ipynb
+++ b/notebooks/Short Term Markets.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "foreign-canon",
+   "execution_count": 1,
+   "id": "middle-richardson",
    "metadata": {},
    "outputs": [
     {
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "continuing-campus",
+   "execution_count": 2,
+   "id": "shared-paintball",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "changing-dallas",
+   "execution_count": 3,
+   "id": "transparent-approach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "protected-sharing",
+   "id": "american-actor",
    "metadata": {},
    "source": [
     "# PAGE 1"
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "spare-swedish",
+   "id": "vertical-maine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "graduate-relevance",
+   "id": "civilian-small",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "important-barbados",
+   "id": "demonstrated-reservation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,8 +133,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "significant-sessions",
+   "execution_count": 7,
+   "id": "extreme-faith",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "separate-bandwidth",
+   "id": "israeli-understanding",
    "metadata": {},
    "source": [
     "## SECTION 1"
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impossible-introduction",
+   "id": "fallen-necessity",
    "metadata": {},
    "source": [
     "### CARD 1"
@@ -167,8 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "young-commander",
+   "execution_count": 8,
+   "id": "tropical-refrigerator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,8 +188,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "funny-newton",
+   "execution_count": 9,
+   "id": "coastal-return",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,8 +208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "prescription-vacuum",
+   "execution_count": 10,
+   "id": "average-loading",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,8 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "toxic-behavior",
+   "execution_count": 11,
+   "id": "limiting-priest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "substantial-prayer",
+   "id": "centered-balloon",
    "metadata": {},
    "source": [
     "## SECTION 2"
@@ -244,8 +244,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "disciplinary-tuner",
+   "execution_count": 12,
+   "id": "flush-reporter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wireless-brighton",
+   "id": "unusual-basin",
    "metadata": {},
    "source": [
     "### CARD 1"
@@ -271,8 +271,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "weekly-crime",
+   "execution_count": 13,
+   "id": "double-berkeley",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,8 +286,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "pressing-theater",
+   "execution_count": 14,
+   "id": "broken-crown",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,8 +314,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "understood-dress",
+   "execution_count": 15,
+   "id": "important-remedy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,8 +363,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "alone-flooring",
+   "execution_count": 16,
+   "id": "adjustable-finnish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "voluntary-editor",
+   "id": "orange-tsunami",
    "metadata": {},
    "source": [
     "### CARD 2"
@@ -383,8 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "novel-smell",
+   "execution_count": 17,
+   "id": "cross-member",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,8 +401,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "liquid-formation",
+   "execution_count": 18,
+   "id": "portuguese-missile",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,8 +438,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "duplicate-relay",
+   "execution_count": 19,
+   "id": "necessary-moisture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rural-howard",
+   "id": "nominated-hartford",
    "metadata": {},
    "source": [
     "# DASH COMPONENTS"
@@ -458,8 +458,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "developed-aberdeen",
+   "execution_count": 20,
+   "id": "celtic-starter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,8 +473,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "twelve-adult",
+   "execution_count": 21,
+   "id": "innocent-methodology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +483,7 @@
     "    id=\"section-table\",\n",
     "    size=3,\n",
     "    children=table,\n",
-    "    options=[{\"title\": \"Latest Prices\"}],\n",
+    "    cards=[{\"title\": \"Latest Prices\"}],\n",
     ")\n",
     "\n",
     "extras = {\n",
@@ -502,7 +502,7 @@
     "graph_tab = mdc.Tab(\n",
     "    id=\"tab-graph\",\n",
     "    children=[pfc_graph, ytd_graph],\n",
-    "    options=[\n",
+    "    tabs=[\n",
     "        {\"label\": \"Forward Prices\"},\n",
     "        {\"label\": \"Historical Prices\"},\n",
     "    ],\n",
@@ -510,7 +510,7 @@
     "graph_section = mdc.Section(\n",
     "    id=\"section-graph\",\n",
     "    children=graph_tab,\n",
-    "    options=[{\"title\": \"Market Watch\"}],\n",
+    "    cards=[{\"title\": \"Market Watch\"}],\n",
     ")\n",
     "\n",
     "page = mdc.Page(children=[table_section, graph_section])\n",
@@ -521,8 +521,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "collaborative-switzerland",
+   "execution_count": 22,
+   "id": "respiratory-scene",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "european-might",
+   "id": "harmful-expense",
    "metadata": {},
    "outputs": [],
    "source": []
