--- a/notebooks/Wholesale Hedge Trades.ipynb
+++ b/notebooks/Wholesale Hedge Trades.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "interstate-french",
+   "id": "thrown-rachel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,19 +21,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "studied-congress",
+   "id": "analyzed-least",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Global variables\n",
     "\n",
     "ASSET_NAME = \"PWRTE\"\n",
-    "PORTFOLIO_NAME = \"TEST_FR\""
+    "PORTFOLIO_NAME = \"TEST_FR\"\n",
+    "\n",
+    "COLUMN_NAMES = npta.definitions.TRADE_DATE_COLUMNS"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "essential-aluminum",
+   "id": "circular-inside",
    "metadata": {},
    "source": [
     "# PAGE 1"
@@ -42,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "exotic-alliance",
+   "id": "several-toolbox",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,21 +59,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "exterior-disorder",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Format trades\n",
-    "\n",
-    "all_df = trades_df[npta.definitions.TRADE_DATE_COLUMNS]\n",
-    "latest_df = all_df[all_df.traded_at==all_df.traded_at.max()]"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "needed-matter",
+   "id": "optional-poverty",
    "metadata": {},
    "source": [
     "## SECTION 1"
@@ -79,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "disturbed-mistress",
+   "id": "overhead-vancouver",
    "metadata": {},
    "source": [
     "### CARD 1"
@@ -87,41 +76,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "south-christianity",
+   "execution_count": 4,
+   "id": "electric-violence",
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_styler = all_df.style\n",
-    "all_styler = all_styler.set_table_styles(\n",
-    "    [\n",
-    "        themes.pandas.noos_pd_row_hover,\n",
-    "        themes.pandas.noos_pd_headers,\n",
-    "    ]\n",
-    ")\n",
-    "all_styler = all_styler.hide_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "offshore-preliminary",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "latest_styler = latest_df.style\n",
-    "latest_styler = latest_styler.set_table_styles(\n",
-    "    [\n",
-    "        themes.pandas.noos_pd_row_hover,\n",
-    "        themes.pandas.noos_pd_headers,\n",
-    "    ]\n",
-    ")\n",
-    "latest_styler = latest_styler.hide_index()"
+    "# Format trades\n",
+    "\n",
+    "all_df = trades_df[COLUMN_NAMES]\n",
+    "latest_df = all_df[all_df.traded_at==all_df.traded_at.max()]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ethical-correction",
+   "id": "complicated-tension",
    "metadata": {},
    "source": [
     "### CARD 2"
@@ -129,19 +97,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "fitting-praise",
+   "execution_count": 5,
+   "id": "linear-error",
    "metadata": {},
    "outputs": [],
    "source": [
-    "trades_volume_df = npta.get_volumes_and_costs_from_trades(all_df)\n",
-    "latest_volumes_df = npta.get_volumes_and_costs_from_trades(latest_df)"
+    "all_volume_df = npta.get_volumes_and_costs_from_trades(all_df)\n",
+    "latest_volume_df = npta.get_volumes_and_costs_from_trades(latest_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "nominated-expression",
+   "execution_count": 6,
+   "id": "exposed-surgery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,14 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "appropriate-voluntary",
+   "execution_count": 7,
+   "id": "emotional-haiti",
    "metadata": {},
    "outputs": [],
    "source": [
-    "all1 = go.Scatter(\n",
-    "    x = trades_volume_df.index,\n",
-    "    y = trades_volume_df.total_volume * 2,\n",
+    "all_volume = go.Scatter(\n",
+    "    x = all_volume_df.index,\n",
+    "    y = all_volume_df.total_volume * 2,\n",
     "    line_color=themes.NOOS_HTML_COLORS[\"gray\"],\n",
     "    name = \"Volumes\",\n",
     "    fill='tozeroy',\n",
@@ -187,18 +155,18 @@
     "    visible = True\n",
     ")\n",
     "\n",
-    "all2 = go.Scatter(\n",
-    "    x = trades_volume_df.index,\n",
-    "    y = trades_volume_df.price_average,\n",
+    "all_price = go.Scatter(\n",
+    "    x = all_volume_df.index,\n",
+    "    y = all_volume_df.price_average,\n",
     "    line_color=themes.NOOS_HTML_COLORS[\"accent\"],\n",
     "    name = \"Prices\",\n",
     "    visible = True,\n",
     "    yaxis=\"y2\"\n",
     ")\n",
     "\n",
-    "latest1 = go.Scatter(\n",
-    "    x = latest_volumes_df.index,\n",
-    "    y = latest_volumes_df.total_volume * 2,\n",
+    "latest_volume = go.Scatter(\n",
+    "    x = latest_volume_df.index,\n",
+    "    y = latest_volume_df.total_volume * 2,\n",
     "    line_color=themes.NOOS_HTML_COLORS[\"gray\"],\n",
     "    name = \"Volumes\",\n",
     "    fill='tozeroy',\n",
@@ -206,9 +174,9 @@
     "    visible = False\n",
     ")\n",
     "\n",
-    "latest2 = go.Scatter(\n",
-    "    x = latest_volumes_df.index,\n",
-    "    y = latest_volumes_df.price_average,\n",
+    "latest_price = go.Scatter(\n",
+    "    x = latest_volume_df.index,\n",
+    "    y = latest_volume_df.price_average,\n",
     "    line_color=themes.NOOS_HTML_COLORS[\"accent\"],\n",
     "    name = \"Prices\",\n",
     "    visible = False,\n",
@@ -216,14 +184,19 @@
     ")\n",
     "\n",
     "fig = go.FigureWidget(\n",
-    "    data=[all1, all2, latest1, latest2],\n",
+    "    data=[\n",
+    "        all_volume,\n",
+    "        all_price,\n",
+    "        latest_volume,\n",
+    "        latest_price,\n",
+    "    ],\n",
     "    layout=GO_LAYOUT,\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "peaceful-census",
+   "id": "single-scholarship",
    "metadata": {},
    "source": [
     "# DASH"
@@ -231,8 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "pleased-spectrum",
+   "execution_count": 8,
+   "id": "ecological-patient",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "military-decline",
+   "id": "incorporated-apollo",
    "metadata": {},
    "source": [
     "## LAYOUT"
@@ -253,8 +226,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "defined-simulation",
+   "execution_count": 9,
+   "id": "destroyed-graphics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,15 +239,15 @@
     ")\n",
     "table = mdc.Table(\n",
     "    id='table',\n",
-    "    columns=[{\"field\": c, \"headerName\": c, \"width\": 200} for i in all_df.columns],\n",
+    "    columns=[{\"field\": c, \"headerName\": c, \"width\": 200} for c in all_df.columns],\n",
     "    rows=all_df.to_dict(orient='records'),\n",
-    "    pageSize=10,\n",
+    "    rowsPerPage=10,\n",
     ")\n",
     "\n",
     "tab = mdc.Tab(\n",
     "    id=\"tab\",\n",
     "    children=[table, graph],\n",
-    "    options=[\n",
+    "    tabs=[\n",
     "        {\"label\": \"Trade blotter\"},\n",
     "        {\"label\": \"Trade profile\"},\n",
     "    ],\n",
@@ -283,8 +256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "manual-disability",
+   "execution_count": 10,
+   "id": "electric-immune",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,15 +276,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "careful-leone",
+   "execution_count": 11,
+   "id": "electoral-reset",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dashboard layout\n",
     "section = mdc.Section(\n",
     "    children=box,\n",
-    "    options=[{\"title\": \"Custom portfolio\"}],\n",
+    "    cards=[{\"title\": \"Custom portfolio\"}],\n",
     ")\n",
     "\n",
     "page = mdc.Page(children=section)\n",
@@ -322,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "retained-brick",
+   "id": "broke-shell",
    "metadata": {},
    "source": [
     "## APP"
@@ -330,8 +303,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "complicated-insider",
+   "execution_count": 12,
+   "id": "arranged-snapshot",
    "metadata": {},
    "outputs": [
     {
@@ -339,16 +312,6 @@
      "output_type": "stream",
      "text": [
       "Dash app running on http://0.0.0.0:8001/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.8/site-packages/jupyter_dash/jupyter_app.py:139: UserWarning:\n",
-      "\n",
-      "The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
-      "\n"
      ]
     }
    ],
@@ -364,7 +327,7 @@
     "@app.callback(\n",
     "    Output(component_id='table', component_property='rows'),\n",
     "    Output(component_id='graph', component_property='figure'),\n",
-    "    Input(component_id='toggle', component_property='selected')\n",
+    "    Input(component_id='toggle', component_property='selected'),\n",
     ")\n",
     "def update_tabs(value):\n",
     "    if value == 'all':\n",
@@ -387,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "young-briefing",
+   "id": "descending-cleanup",
    "metadata": {},
    "outputs": [],
    "source": []
