--- a/notebooks/test_layout.ipynb
+++ b/notebooks/test_layout.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "attempted-secondary",
+   "execution_count": 2,
+   "id": "gorgeous-clause",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "legislative-georgia",
+   "execution_count": 3,
+   "id": "quality-start",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "    id=\"section-1\",\n",
     "    orientation=\"columns\",\n",
     "    children=[text, text_2],\n",
-    "    options=[{\"title\": \"Card 1a\", \"size\": 3}, {\"title\": \"Card 1b\"}]\n",
+    "    cards=[{\"title\": \"Card 1a\", \"size\": 3}, {\"title\": \"Card 1b\"}]\n",
     ")\n",
     "\n",
     "section_2 = mdc.Section(\n",
@@ -34,7 +34,7 @@
     "    size=3,\n",
     "    children=[text, text_2],\n",
     "    orientation=\"rows\",\n",
-    "    options=[{\"title\": \"Card 2a\", \"size\": 4}, {\"title\": \"Card 2b\"}]\n",
+    "    cards=[{\"title\": \"Card 2a\", \"size\": 4}, {\"title\": \"Card 2b\"}]\n",
     ")\n",
     "\n",
     "page = mdc.Page(orientation=\"columns\", children=[section_1, section_2])\n",
@@ -45,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "complicated-territory",
+   "execution_count": 4,
+   "id": "amateur-killer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "reasonable-tracy",
+   "id": "dedicated-conversation",
    "metadata": {},
    "outputs": [],
    "source": []
