--- a/notebooks/test_tab.ipynb
+++ b/notebooks/test_tab.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "radio-destination",
+   "id": "stone-occasions",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "advised-notification",
+   "id": "caroline-clearance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,20 +24,20 @@
     "\n",
     "tab = mdc.Tab(\n",
     "    children=[text, text_2],\n",
-    "    options=[{\"label\": \"2a\"}, {\"label\": \"2b\"}]\n",
+    "    tabs=[{\"label\": \"2a\"}, {\"label\": \"2b\"}]\n",
     ")\n",
     "\n",
     "section_1 = mdc.Section(\n",
     "    id=\"section-1\",\n",
     "    orientation=\"rows\",\n",
     "    children=[text, text_2],\n",
-    "    options=[{\"title\": \"Card 1a\", \"size\": 3}, {\"title\": \"Card 1b\"}]\n",
+    "    cards=[{\"title\": \"Card 1a\", \"size\": 3}, {\"title\": \"Card 1b\"}]\n",
     ")\n",
     "\n",
     "section_2 = mdc.Section(\n",
     "    id=\"section-2\",\n",
     "    children=tab,\n",
-    "    options=[{\"title\": \"Card 2\"}]\n",
+    "    cards=[{\"title\": \"Card 2\"}]\n",
     ")\n",
     "\n",
     "page = mdc.Page(orientation=\"columns\", children=[section_1, section_2])\n",
@@ -48,19 +48,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "touched-holder",
+   "execution_count": 3,
+   "id": "mediterranean-terminal",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.8/site-packages/jupyter_dash/jupyter_app.py:139: UserWarning: The 'environ['werkzeug.server.shutdown']' function is deprecated and will be removed in Werkzeug 2.1.\n",
-      "  func()\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "app = jupyter_dash.JupyterDash(__name__)\n",
     "app.layout = layout\n",
@@ -71,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cosmetic-amazon",
+   "id": "rural-narrow",
    "metadata": {},
    "outputs": [],
    "source": []
