Switch table to native MUI v4 components

--- a/notebooks/Wholesale Hedge Trades.ipynb
+++ b/notebooks/Wholesale Hedge Trades.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "thrown-rachel",
+   "id": "artistic-pollution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "analyzed-least",
+   "id": "indonesian-defense",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "circular-inside",
+   "id": "related-somalia",
    "metadata": {},
    "source": [
     "# PAGE 1"
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "several-toolbox",
+   "id": "breathing-equivalent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "optional-poverty",
+   "id": "supreme-certificate",
    "metadata": {},
    "source": [
     "## SECTION 1"
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "overhead-vancouver",
+   "id": "earlier-parking",
    "metadata": {},
    "source": [
     "### CARD 1"
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "electric-violence",
+   "id": "seventh-element",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complicated-tension",
+   "id": "cardiovascular-marshall",
    "metadata": {},
    "source": [
     "### CARD 2"
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "linear-error",
+   "id": "modified-guidance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "exposed-surgery",
+   "id": "animal-connecticut",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "emotional-haiti",
+   "id": "floppy-sailing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "single-scholarship",
+   "id": "spoken-environment",
    "metadata": {},
    "source": [
     "# DASH"
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ecological-patient",
+   "id": "eastern-portrait",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incorporated-apollo",
+   "id": "yellow-caution",
    "metadata": {},
    "source": [
     "## LAYOUT"
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "destroyed-graphics",
+   "id": "veterinary-newfoundland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,9 +239,8 @@
     ")\n",
     "table = mdc.Table(\n",
     "    id='table',\n",
-    "    columns=[{\"field\": c, \"headerName\": c, \"width\": 200} for c in all_df.columns],\n",
+    "    columns=[{\"field\": c, \"width\": 200} for c in all_df.columns],\n",
     "    rows=all_df.to_dict(orient='records'),\n",
-    "    rowsPerPage=10,\n",
     ")\n",
     "\n",
     "tab = mdc.Tab(\n",
@@ -257,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "electric-immune",
+   "id": "printable-breach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "electoral-reset",
+   "id": "prescription-publication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "broke-shell",
+   "id": "demographic-camping",
    "metadata": {},
    "source": [
     "## APP"
@@ -304,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "arranged-snapshot",
+   "id": "severe-bridge",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "descending-cleanup",
+   "id": "western-tulsa",
    "metadata": {},
    "outputs": [],
    "source": []
