Add sample notebook illustrating a Toggle component

--- a/notebooks/test_tab.ipynb
+++ b/notebooks/test_tab.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "stone-occasions",
+   "execution_count": null,
+   "id": "disciplinary-aluminum",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import jupyter_dash\n",
+    "from jupyter_dash import JupyterDash\n",
     "\n",
     "import dash_mdc_neptune as mdc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "caroline-clearance",
+   "execution_count": null,
+   "id": "julian-wheat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +48,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "mediterranean-terminal",
+   "execution_count": null,
+   "id": "fossil-external",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rural-narrow",
+   "id": "statutory-piano",
    "metadata": {},
    "outputs": [],
    "source": []
